--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <body>
 <section class="main">
   <div class="infographics-wrap">
+    <h1>Environmental<br>conditions</h1>
     <img id="temperature" class="ic ic-therm" src="images/icons/ic_therm.svg" onclick="showModal(this)"/>
     <img class="c c1" src="images/salmonella_1.svg"/>
     <img id="humidity" class="ic ic-hum" src="images/icons/ic_hum.svg" onclick="showModal(this)"/>
